2026-02-11T02:27:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890406201 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 990 1470
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25] / [2026-02-07]

2026-02-10T02:30:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21849319098 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-08T02:35:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790930003 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-21 2026-01-22] / []

2026-02-07T02:02:51Z: