@@ -1,3 +1,12 @@
+2026-02-15T02:23:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22028198903 # 878
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 990 1470
+* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-11T02:27:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890406201 # 874
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
